--- a/src/app/routes/client-home/dog-training-home/dog-training-home.component.scss
+++ b/src/app/routes/client-home/dog-training-home/dog-training-home.component.scss
@@ -1,5 +1,21 @@
+.container{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 50px 1fr;
+}
+.item-1{
+  grid-column: 1;
+  grid-row: 1;
+  background-color: #d5def5;
+
+}
+.item-2{
+  grid-column: 1;
+  grid-row: 2;
+  background-color: #d5def5;
 .dog-training-section {
   margin: 2rem;
+  background-color: #d5def5;
   font-family: Arial, sans-serif;
 
   .text-and-image {
@@ -83,4 +99,5 @@
     color: #4682B4;
     font-size: 26px;
   }
+}
 }
