--- a/src/app/routes/client-home/pet-for-adoption/pet-for-adoption.component.html
+++ b/src/app/routes/client-home/pet-for-adoption/pet-for-adoption.component.html
@@ -1,20 +1,10 @@
 <body>
   <div class="container">
-    <div class="item item-0">
-      <app-client-toolbar></app-client-toolbar>
-    </div>
 
     <div class="item item-1">
-      <div class="breadcrumb-container mat-elevation-z2">
-        <nav>
-          <span class="breadcrumb-item">
-            <button mat-button (click)="navigateTo('/client-home')" class="breadcrumb-link">Home</button>
-          </span>
-          <span class="breadcrumb-separator"> / </span>
-          <span class="breadcrumb-item">
-            <button mat-button (click)="navigateTo('/pet-for-adoption')" class="breadcrumb-link current">Adoption</button>
-          </span>
-        </nav>
+      <div class="pets">
+        Pets For Adoption
+      </div>
       </div>
 
 
