--- a/src/app/routes/pet/pet-detail/pet-detail.component.scss
+++ b/src/app/routes/pet/pet-detail/pet-detail.component.scss
@@ -70,6 +70,9 @@
 .item-1{
 grid-column: 1;
 
+.petname{
+  font-size: 1.4rem;
+}
 .closeButton{
   margin-bottom: 10px;
   color: rgb(221, 19, 19);
@@ -85,10 +88,9 @@ grid-column: 1;
   padding: 16px;
 
   .id-card-content {
-    display: flex;
-    flex-direction: column;
+
     align-items: center;
-    gap: 15px;
+    gap: 5px;
   }
 
   .pet-picture {
@@ -129,7 +131,8 @@ grid-column: 1;
 grid-column: 2;
 
 .owner-card {
-  width: 350px; /* Adjust card width */
+  width: flex; /* Adjust card width */
+  height: flex;
   margin: 20px auto; /* Center the card */
   border-radius: 8px; /* Rounded corners */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
@@ -138,9 +141,9 @@ grid-column: 2;
   margin-top: 70px;
 
   .owner-title {
-    font-size: 1.5em;
-    font-weight: bold;
-    margin-bottom: 10px;
+    font-size: 1.6em;
+    //font-weight: bold;
+   // margin-bottom: 10px;
     text-align: center;
   }
 
