--- a/src/app/theme/sidebar/sidebar.component.scss
+++ b/src/app/theme/sidebar/sidebar.component.scss
@@ -2,10 +2,12 @@
 
 .matero-sidebar-header {
   overflow: hidden;
-
+   border-radius: 0;
+  background-color: #d5def5;
   mat-toolbar {
     width: var(--sidenav-width);
     padding: 0 0.5rem;
+    background-color: #d5def5;
   }
 
   // Remove redundant padding in the slide toggle
@@ -19,6 +21,7 @@
   padding: 0 0.5rem 0.5rem;
   overflow: auto;
   scrollbar-width: none;
+  background-color: #d5def5;
 
   @include breakpoints.bp-lt(small) {
     & {
