--- a/src/app/routes/adoption/adoption.component.scss
+++ b/src/app/routes/adoption/adoption.component.scss
@@ -77,7 +77,7 @@
       }
 
       .btn-delete {
-        margin-left: 90px;
+        margin-left: 160px;
         color: #f44336; // Red delete icon
         transition: transform 0.2s;
 
@@ -90,7 +90,10 @@
       img {
         max-height: 230px;
         object-fit: cover;
-        width: 100%;
+        width: 80%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       mat-card-content {
