--- a/src/app/routes/appointment/appointment.component.scss
+++ b/src/app/routes/appointment/appointment.component.scss
@@ -3,13 +3,15 @@
   flex-direction: column;
   align-items: center;
   padding: 16px;
+  background-color: #f5f5f5;
+
 
   .header {
     width: 100%;
     display: flex;
     justify-content: flex-start;
     margin-bottom: 16px;
-    align-items: center;  // Added this to vertically align the items in the header
+    align-items: center;
 
     .add-appointment-btn {
       margin-left: 16px;
@@ -17,20 +19,20 @@
 
     .staff,
     .date {
-      margin-left: 20px;  // Adjusts the space between the dropdowns
+      margin-left: 20px;
     }
 
     mat-form-field {
       background-color: transparent;
-      width: 200px;  // Adjust the width as needed
+      width: 200px;
 
       .mat-select-trigger {
-        padding: 6px 12px; // Adjust the padding if needed
+        padding: 6px 12px;
         font-size: 1rem;
       }
 
       .mat-select-arrow {
-        color: #414040; // Arrow color
+        color: #414040;
       }
     }
   }
@@ -54,6 +56,14 @@
       color: #333;
     }
 
+    .no-appointments {
+      text-align: center;
+      background-color: #f8d7da;
+  color: #721c24;
+      font-size: 1.2rem;
+      margin: 40px 0;
+    }
+
     .appointments-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -63,9 +73,9 @@
         padding: 16px;
         transition: transform 0.2s;
 
-      &:hover {
-        transform: translateY(-1px);
-      }
+        &:hover {
+          transform: translateY(-1px);
+        }
 
         mat-card-header {
           margin-bottom: 8px;
@@ -102,6 +112,7 @@
     }
   }
 }
+
 
 .schedule-container {
   padding: 20px;
