--- a/src/app/routes/client-home/adoption-details/adoption-details.component.scss
+++ b/src/app/routes/client-home/adoption-details/adoption-details.component.scss
@@ -1,16 +1,12 @@
 .container{
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 90px 100px 1fr;
-}
-.item-0{
-  grid-column: 1;
-  grid-row: 1;
+  grid-template-rows: 100px 1fr;
 }
 
 .item-1{
   grid-column: 1;
-  grid-row: 2;
+  grid-row: 1;
   background-color: #d5def5;
 
   .breadcrumb-container {
@@ -54,7 +50,7 @@
 }
 .item-2{
   grid-column: 1;
-  grid-row: 3;
+  grid-row: 2;
   background-color: #d5def5;
 
   .dental-care-section {
