--- a/src/app/routes/client-home/adoption-questionnaire/adoption-questionnaire.component.scss
+++ b/src/app/routes/client-home/adoption-questionnaire/adoption-questionnaire.component.scss
@@ -1,15 +1,11 @@
 .container{
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 90px 160px 1fr;
+  grid-template-rows: 160px 1fr;
 }
 
-.item-0{
-  grid-column: 1/2;
-  grid-row: 1;
-}
 .item-1{
   grid-column: 1/2;
-  grid-row: 2;
+  grid-row: 1;
   background-color: #d5def5;
 
   .breadcrumb-container {
@@ -53,7 +49,7 @@
 
 .item-2 {
   grid-column: 1/2;
-  grid-row: 3;
+  grid-row: 2;
   background-color: #d5def5;
 
 .adoption-card {
