--- a/src/app/routes/client-home/ratings/ratings.component.scss
+++ b/src/app/routes/client-home/ratings/ratings.component.scss
@@ -11,6 +11,9 @@
   }
 
   .testimonial-left {
+    .text{
+      color:#e2dbdb;
+    }
     .review-cards {
       display: flex;
       flex-direction: column;
@@ -41,13 +44,14 @@
     h2 {
       font-size: 24px;
       margin-bottom: 10px;
+      color: #e2dbdb;
+      text-align: center;
     }
 
     p {
       margin-bottom: 20px;
       font-size: 1rem;
       font-style: italic;
-      color: #2b2a2a;
     }
   }
 
