--- a/src/app/routes/dash-ratings/dash-ratings.component.html
+++ b/src/app/routes/dash-ratings/dash-ratings.component.html
@@ -5,7 +5,7 @@
 
     <div class="review-cards">
       <mat-card class="review-card" *ngFor="let review of reviews">
-
+        <mat-card-content>
         <p><strong><div class="name">{{ review.fullName }}</div> </strong></p>
         <p>{{ review.review }}</p>
         <p>{{review.createdAt | date: 'dd MMM yyyy'}}</p>
@@ -17,6 +17,7 @@
             {{ star === 1 ? 'star' : 'star_border' }}
           </mat-icon>
         </div>
+      </mat-card-content>
       </mat-card>
     </div>
   </div>
