--- a/src/app/routes/pet/pet.component.html
+++ b/src/app/routes/pet/pet.component.html
@@ -8,10 +8,14 @@
 
 
 <div>
-<mat-form-field class="filter">
-  <mat-label><mat-icon>search</mat-icon> Search </mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Search by animal or owner name" #input>
-</mat-form-field>
+  <div>
+    <mat-form-field class="filter">
+      <mat-label><mat-icon>search</mat-icon> Search </mat-label>
+      <input matInput type="text"
+             (input)="applySearch(input.value)"
+             placeholder="Search by animal name or breed" #input>
+    </mat-form-field>
+  </div>
 </div>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -26,6 +30,11 @@
   <ng-container matColumnDef="AnimalName">
     <th mat-header-cell *matHeaderCellDef class="tableheader"> Pet Name </th>
     <td mat-cell *matCellDef="let element"> {{element.animalName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Breed">
+    <th mat-header-cell *matHeaderCellDef class="tableheader"> Breed </th>
+    <td mat-cell *matCellDef="let element"> {{element.breed}} </td>
   </ng-container>
 
   <ng-container matColumnDef="Species">
